--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -7,7 +7,7 @@ python_sources(
 )
 
 # This target allows us to bundle our app into a PEX binary file via
-#  `./pants package`. We can also run it with `./pants run`. See
+#  `pants package`. We can also run it with `pants run`. See
 #  https://www.pantsbuild.org/docs/python-package-goal and
 #  https://www.pantsbuild.org/docs/python-run-goal.
 pex_binary(
