Upgrade action version

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: pantsbuild/actions/init-pants@v4-scie-pants
+    - uses: pantsbuild/actions/init-pants@v5-scie-pants
       # This action bootstraps pants and manages 2-3 GHA caches.
       # See: github.com/pantsbuild/actions/tree/main/init-pants/
       with:
@@ -48,14 +48,11 @@ jobs:
         # See https://pants.readme.io/docs/using-pants-in-ci for tips on how to periodically clean it up.
         # Alternatively you change gha-cache-key to ignore old caches.
     - name: Check BUILD files
-      run:  |
-        pants tailor --check update-build-files --check ::
+      run: pants tailor --check update-build-files --check ::
     - name: Lint and typecheck
-      run: | 
-        pants lint check ::
+      run: pants lint check ::
     - name: Test
-      run: |
-        pants test ::
+      run: pants test ::
     - name: Package / Run
       run: |
         # We also smoke test that our release process will work by running `package`.
