example of multiple resolves

--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -2,15 +2,27 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 # This target sets the metadata for all the Python non-test files in this directory.
-python_sources(
-    name="lib",
+# python_sources(
+#     name="lib",
+# )
+
+python_source(
+    name="main",
+    source="main.py",
+    resolve="python-default"
+)
+
+python_source(
+    name="main2",
+    source="main2.py",
+    resolve="service-main2"
 )
 
 # This target allows us to bundle our app into a PEX binary file via
 #  `pants package`. We can also run it with `pants run`. See
 #  https://www.pantsbuild.org/docs/python-package-goal and
 #  https://www.pantsbuild.org/docs/python-run-goal.
-pex_binary(
-    name="pex_binary",
-    entry_point="main.py",
-)
+# pex_binary(
+#     name="pex_binary",
+#     entry_point="main.py",
+# )
