--- a/helloworld/translator/BUILD
+++ b/helloworld/translator/BUILD
@@ -4,11 +4,13 @@
 # This target sets the metadata for all the Python non-test files in this directory.
 python_sources(
     name="lib",
+    resolve=parametrize("python-default", "service-main2")
 )
 
 # This target sets the metadata for all the Python test files in this directory.
 python_tests(
     name="tests",
+    resolve=parametrize("python-default", "service-main2")
 )
 
 # This target allows us to build a `.whl` bdist and a `.tar.gz` sdist by auto-generating
@@ -19,12 +21,12 @@ python_tests(
 #  their dependencies.
 python_distribution(
     name="dist",
-    dependencies=[":lib"],
+    dependencies=[":lib@resolve=python-default"],
     wheel=True,
     sdist=True,
     provides=setup_py(
         name="helloworld.translator",
         version="0.0.1",
         description="A language translator.",
-    ),
+    )
 )
