adjust pex_binary

--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -2,10 +2,6 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 # This target sets the metadata for all the Python non-test files in this directory.
-# python_sources(
-#     name="lib",
-# )
-
 python_source(
     name="main",
     source="main.py",
@@ -22,7 +18,14 @@ python_source(
 #  `pants package`. We can also run it with `pants run`. See
 #  https://www.pantsbuild.org/docs/python-package-goal and
 #  https://www.pantsbuild.org/docs/python-run-goal.
-# pex_binary(
-#     name="pex_binary",
-#     entry_point="main.py",
-# )
+pex_binary(
+    name="pex_binary_main",
+    entry_point="main.py",
+    resolve="python-default"
+)
+
+pex_binary(
+    name="pex_binary_main2",
+    entry_point="main2.py",
+    resolve="service-main2"
+)
