ci: Updated init-pants action to v8.

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: pantsbuild/actions/init-pants@v5-scie-pants
+    - uses: pantsbuild/actions/init-pants@v8
       # This action bootstraps pants and manages 2-3 GHA caches.
       # See: github.com/pantsbuild/actions/tree/main/init-pants/
       with:
