--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -5,25 +5,22 @@
 
 name: Pants
 
-on: [push, pull_request]
+on: [push, workflow_dispatch]
 
 jobs:
-  org-check:
-    name: Check GitHub Organization
-    if: ${{ github.repository_owner == 'pantsbuild' }}
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Noop
-        run: "true"
   build:
     name: Perform CI Checks
-    needs: org-check
-    runs-on: ubuntu-24.04
+    runs-on: 
+      # Replace with your profile label https://namespace.so/docs/features/faster-github-actions#using-runner-profiles
+      - namespace-profile-default
     strategy:
       matrix:
         python-version: [3.9]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up remote cache
+      run: |
+        nsc pants cache setup --pants-toml=/tmp/pants.toml
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
@@ -31,22 +28,13 @@ jobs:
       # This action bootstraps pants and manages 2-3 GHA caches.
       # See: github.com/pantsbuild/actions/tree/main/init-pants/
       with:
-        # v0 makes it easy to bust the cache if needed
-        # just increase the integer to start with a fresh cache
         gha-cache-key: v0
-        # The Python backend uses named_caches for Pip/PEX state,
-        # so it is appropriate to invalidate on lockfile changes.
         named-caches-hash: ${{ hashFiles('python-default.lock') }}
-        # If you're not using a fine-grained remote caching service (see https://www.pantsbuild.org/docs/remote-caching),
-        # then you may also want to preserve the local Pants cache (lmdb_store). However this must invalidate for
-        # changes to any file that can affect the build, so may not be practical in larger repos.
-        # A remote cache service integrates with Pants's fine-grained invalidation and avoids these problems.
-        cache-lmdb-store: 'true'  # defaults to 'false'
-        # Note that named_caches and lmdb_store falls back to partial restore keys which
-        # may give a useful partial result that will save time over completely clean state,
-        # but will cause the cache entry to grow without bound over time.
-        # See https://www.pantsbuild.org/stable/docs/using-pants/using-pants-in-ci for tips on how to periodically clean it up.
-        # Alternatively you change gha-cache-key to ignore old caches.
+        pants-ci-config: |
+          pants.toml
+          pants.ci.toml
+          /tmp/pants.toml
+
     - name: Check BUILD files
       run: |
         pants tailor --check update-build-files --check ::
