Try array syntax

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -30,9 +30,7 @@ jobs:
       with:
         gha-cache-key: v0
         named-caches-hash: ${{ hashFiles('python-default.lock') }}
-        pants-ci-config: |
-          pants.toml
-          /tmp/pants.toml
+        pants-ci-config: "['pants.toml', '/tmp/pants.toml']"
 
     - name: Check BUILD files
       run: |
